@@ -22,6 +22,7 @@ This project receives help from these awesome contributors:
 - Georgy Frolov
 - Michał Górny
 - Waldir Pimenta
+- Mel Dafert
 
 Thanks
 ------
