@@ -8,6 +8,7 @@ TBD
 * Add psql_unicode table format
 * Add minimal table format
 * Fix pip2 installing py3-only versions
+* Format unprintable bytes (eg 0x00, 0x01) as hex
 
 Version 2.1.0
 -------------
